--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,32 @@
     <link rel="stylesheet" href="./public/css/app.css">
     <title>Start</title>
 </head>
+
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="container justify-content-between">
+                <div class="logo">
+                    <a class="a text-uppercase text-decoration-none text-light" href="">start bootstrap</a>
+                </div>
+                <div class="menu">
+                    <a class="a text-uppercase text-decoration-none m-2" href="">sign up</a>
+                    <a class="a text-uppercase text-decoration-none" href="">log in</a>
+                </div>
+            </div>
+        </nav>
+
+        <div class="banner pt-lg-5 pb-lg-5">
+            <div class="container text-center p-5">
+                <h1 class="text-capitalize text-light">one page wonder</h1>
+                <h2 class="text-capitalize text-light">will rock your socks off</h2>
+                <button class="btn text-uppercase text-light pt-3 pb-3 pe-5 ps-5 m-5" type="submit">learn more</button>
+            </div>
+        </div>
+    </header>
+
+
 
 </body>
+
 </html>
