--- a/index.html
+++ b/index.html
@@ -32,6 +32,38 @@
         </div>
     </header>
 
+    <main>
+        <div class="container mb-5 mt-5">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-4 p-3">
+                    <h2>For those about to rock ...</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, odit laboriosam! Iusto adipisci excepturi explicabo aperiam minima eos! Ullam, fuga?</p>
+                </div>
+                <div class="col-4 p-3">
+                    <img class="img-fluid rounded-circle w-100" src="./public/img/01.jpg" alt="">
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-4 p-3">
+                    <img class="img-fluid rounded-circle w-100" src="./public/img/02.jpg" alt="">
+                </div>
+                <div class="col-4 p-3">
+                    <h2>We salute you!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur repellendus quo at nemo similique rem autem consequatur quos maxime id!</p>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-4 p-3">
+                    <h2>Let there be rock</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempora culpa autem? Aut accusamus ut eaque! Deleniti sunt id cupiditate.</p>
+                </div>
+                <div class="col-4 p-3">
+                    <img class="img-fluid rounded-circle w-100" src="./public/img/03.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+
 
 
 </body>
