--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar p-3">
             <div class="container justify-content-between">
                 <div class="logo">
                     <a class="a text-uppercase text-decoration-none text-light" href="">start bootstrap</a>
@@ -64,6 +64,9 @@
         </div>
     </main>
 
+    <footer class="bg-black text-center text-light p-3">
+        <p class="mb-0">Copyright © Your website 2020</p>
+    </footer>
 
 
 </body>
